--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 0. pré-requis : installez nodejs sur votre ordi => https://nodejs.org/en/
-1. Telechargez le contenu du dossier trailblazer dans votre dossier de travail en local
+1. Telechargez le contenu du dossier trailblazer dans votre dossier de travail local
 2. Installez les dépendances => npm install
 3. lancez le jeu => node index.js
 4. ouvrez vote browser et allez à l'adresse : http://localhost:3000/
